labs/lab-02-ingress/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: lab02
  labels:
    app: app1
spec:
  type: ClusterIP
  selector:
    app: app1
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: lab02
  labels:
    app: app2
spec:
  type: ClusterIP
  selector:
    app: app2
  ports:
  - name: http
    port: 80
    targetPort: 80
